--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,15 @@ find_package(Qt5 COMPONENTS Widgets REQUIRED)
 find_package(PolyPlugin REQUIRED)
 find_package(PolyTools REQUIRED)
 
+# Qt variables
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(AUTOUIC_SEARCH_PATHS Form)
+set(Qt5_DIR $ENV{POLY_QTDIR})
+list(APPEND CMAKE_PREFIX_PATH $ENV{POLY_QTDIR})
+
 set(POLYTOOLS_TARGET PolyTools)
 set(RESOURCE_SUB_EDITOR_API_TARGET ResourceSubEditorAPI)
 set(RESOURCE_SUB_EDITOR_PLUGIN_TARGET ResourceSubEditorPlugin)
